<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">NaTour</string>

    <!-- Server ID Google -->
    <string name="server_client_id">470319492727-viq0pqpsdd33d6vr4vsdc78cusco9g9l.apps.googleusercontent.com</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="insert_name">Insert your name</string>
    <string name="create_a_new_profile">Create a new profile</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>

    <!-- Facebook app -->
    <string name="facebook_app_id">5367159293399780</string>
    <string name="fb_login_protocol_scheme">fb5367159293399780</string>
    <string name="facebook_client_token" tools:ignore="Typos">aa1508129fd7442dc307ed975eb35cc1</string>

    <!-- Sign in / Sign up -->
    <string name="enter_your_username">Enter your username</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="not_registered_yet_sign_up_now">Not registered yet? Sign up now!</string>
    <string name="signin">Signin</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="add_a_route">Add a route</string>
    <string name="enter_route_name">Enter route name</string>
    <string name="select_a_level_of_difficulty">Select a level of difficulty</string>
    <string name="description">Description</string>
    <string name="select_starting_point_of_the_route">Select starting point of the route</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="go">GO</string>
    <string name="confirm">Confirm</string>
    <string name="how_do_you_want_to_add_a_route">How do you want to add a route?</string>
    <string name="choose_a_starting_point">Choose a starting point</string>
    <string name="draw_the_route_on_the_map">Draw the route on the map</string>

    <!-- Home -->
    <string name="explore_new_trails">Explore new trails</string>
    <string name="card_cover">Card Cover</string>
    <string name="select_a_duration">Select a duration</string>
    <string name="months">Months</string>
    <string name="days">Days</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="add_a_trail">Add a trail</string>
    <string name="enter_trail_name">Enter trail name</string>
    <string name="upload_a_photo">Upload a photo</string>
    <string name="difficulty_level">Difficulty Level:</string>
    <string name="travel_time">Travel time:</string>
    <string name="description_label">Description:</string>
    <string name="map">Map</string>
    <string name="add_a_photo">Add a photo</string>
    <string name="photos">Photos</string>
    <string name="log_out">Log out</string>
    <string name="there_are_no_photos">There are no photos</string>
    <string name="go_to_trail">Go to trail</string>
    <string name="reviews">Reviews</string>
    <string name="there_are_no_reviews">There are no reviews</string>
    <string name="add_a_review">Add a review</string>
    <string name="optional_tell_others_what_you_think">(Optional) Tell others what you think</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="download_pdf">Download PDF</string>
    <string name="download_gpx">Download GPX</string>
    <string name="starting_point_lat_long">Starting point LAT/LONG:</string>
    <string name="difficulty">Difficulty:</string>
    <string name="duration">Duration:</string>
    <string name="trail_name">Trail name:</string>
    <string name="trail_position">Trail position:</string>
    <string name="first_nameU">FIRST NAME</string>
    <string name="last_nameU">LAST NAME</string>
    <string name="usernameU">USERNAME</string>
    <string name="user_details">User details</string>
    <string name="log_outU">LOG OUT</string>
    <string name="emailU">EMAIL</string>
    <string name="very_difficult">Very difficult</string>
    <string name="your_favorite_trails">Your favorite trails</string>
    <string name="loading">Loading…</string>
    <string name="optional_tell_others_about_the_trail">(Optional) Tell others about the trail</string>
    <string name="select_a_level_of_difficulty_r">Select a level of difficulty*</string>
    <string name="enter_trail_name_r">Enter trail name*</string>
    <string name="select_a_duration_r">Select a duration*</string>
    <string name="upload_a_photo_r">Upload a photo*</string>
    <string name="insert_the_route">Insert the route</string>
    <string name="your_route_in_gpx_format">Your route in gpx format</string>
    <string name="select_a_difficulty_level_r">Select a difficulty level*</string>
    <string name="easiest">Easiest</string>
    <string name="very_easy">Very easy</string>
    <string name="there_are_no_saved_favorite_trails">There are no saved favorite trails</string>
    <string name="login">Login</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="sign_up">Sign up</string>
    <string name="retry">Retry</string>
    <string name="inbox">Inbox</string>
    <string name="ask_about_the_trail">Ask about the trail</string>
    <string name="send">Send</string>
    <string name="message">Message</string>

    <!-- Route Creation -->
    <string-array name="listDifficulties">
        <item>Easiest</item>
        <item>Easy</item>
        <item>More difficult</item>
        <item>Very difficult</item>
        <item>Extremely difficult</item>
    </string-array>

</resources>