<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <data>
        <variable
            name="mainUserViewModel"
            type="com.example.natour.ui.MainUserViewModel" />
        <variable
            name="userDetailsDialogFragment"
            type="com.example.natour.ui.home.user.UserDetailsDialogFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.home.user.UserDetailsDialogFragment">

        <!-- User details Toolbar -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_user_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <!-- User details label -->
                <TextView
                    app:layout_constraintStart_toStartOf="parent"
                    android:id="@+id/toolbar_user_details_label"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/user_details"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:textColor="@color/black"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.appcompat.widget.Toolbar>

        <!-- Divider -->
        <View style="@style/Divider"
            app:layout_constraintTop_toBottomOf="@id/toolbar_user_details"
            android:layout_height="1dp"
            android:layout_width="match_parent"

            />

        <!-- FIRST NAME -->
        <LinearLayout
            android:id="@+id/first_name_linear_layout"
            android:layout_margin="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/toolbar_user_details"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_nameU"
                android:textSize="13sp"
                android:textColor="@android:color/darker_gray"
                />

            <TextView
                android:id="@+id/first_name_text_view"
                android:layout_marginTop="6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Vincenzo"
                android:text="@{mainUserViewModel.mainUser.firstName}"
                android:textSize="13sp"
                android:textColor="@color/black"
                />

        </LinearLayout>

        <!-- LAST NAME -->
        <LinearLayout
            android:id="@+id/last_name_linear_layout"
            android:layout_margin="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/first_name_linear_layout"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_nameU"
                android:textSize="13sp"
                android:textColor="@android:color/darker_gray"
                />

            <TextView
                android:layout_marginTop="6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Tramo"
                android:text="@{mainUserViewModel.mainUser.lastName}"
                android:textSize="13sp"
                android:textColor="@color/black"
                />

        </LinearLayout>

        <!-- USERNAME -->
        <LinearLayout
            android:id="@+id/username_linear_layout"
            android:layout_margin="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/last_name_linear_layout"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usernameU"
                android:textSize="13sp"
                android:textColor="@android:color/darker_gray"
                />

            <TextView
                android:layout_marginTop="6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="bonek"
                android:text="@{mainUserViewModel.mainUser.username}"
                android:textSize="13sp"
                android:textColor="@color/black"
                />

        </LinearLayout>

        <!-- EMAIL -->
        <LinearLayout
            android:id="@+id/email_linear_layout"
            android:layout_margin="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/username_linear_layout"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emailU"
                android:textSize="13sp"
                android:textColor="@android:color/darker_gray"
                />

            <TextView
                android:layout_marginTop="6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="v.tramo@gmail.com"
                android:text="@{mainUserViewModel.mainUser.email}"
                android:textSize="13sp"
                android:textColor="@color/black"
                />

        </LinearLayout>

        <!-- Logout button -->
        <Button
            android:onClick="@{() -> userDetailsDialogFragment.onLogout()}"
            android:layout_margin="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/email_linear_layout"
            app:layout_constraintEnd_toEndOf="@id/username_linear_layout"
            android:text="@string/log_outU"
            android:backgroundTint="@android:color/holo_red_dark"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>